# kafka_randomfaker

./: .Dockerignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/: 1_1_kafka_producer.py  1_2_kafka_consumer.py  __consumer_00.py  dashboard_streamlit.py  kafka_producer.py  main.py  mongodb_connect.py
src/kafka/: kafka_consumer.py  kafka_producer.py
src/python/: dashboard.py  kafka_consumer.py  kafka_producer.py
src/python/data/: base_clientes.json  base_clientes.py
src/streamlit/v1/: dashboard.py
tests/: test_gemini_api.py  test_gemini_api2.py  test_producer.py  verifica_dados_mongo.py
