[project]
name = "proj-eng2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Alves",email = "felipe.alvessilva@edu.unifor.com"}
]
readme = "README.md"
packages = [
    { include = "src" }
]
requires-python = ">=3.10"
dependencies = [
    "kafka-python (==2.0.2)",
    "pandas (==2.2.2)",
    "requests (==2.31.0)",
    "python-dotenv (==1.1.1)",
    "streamlit (==1.35.0)",
    "faker (==25.2.0)",
    "pymongo (==4.7.2)",
    "pytest (>=8.4.1,<9.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "huggingface-hub (>=0.34.1,<0.35.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
